hello_nodejs_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nodejs-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nodejs
  template:
    metadata:
      labels:
        app: hello-nodejs
    spec:
      containers:
      - image: hello-nodejs:latest
        imagePullPolicy: IfNotPresent
        name: hello-nodejs
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
        ports:
        - containerPort: 80
