hello_nodejs_service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodejs-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30010
      name: mainport
      targetPort: 80
      protocol: TCP

  selector:
    app: hello-nodejs
