ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alberts-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-nodejs-service
            port:
              number: 80
    #host: a.test
